fixed the messagebox container gaining a scrollbar

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -768,7 +768,7 @@ button.button-icon > img {
 .message-box {
   position: relative;
   padding-left: 3.5em;
-  overflow: auto;
+  overflow: hidden;
 }
 .message-box.notimes {
   padding-left: 0;
